# RESTServer

./: CMakeLists.txt  README.md  RESTServer.pc  RESTServer.pc.in
.github/workflows/: cmake-build.yml
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in
docs/html/: _h_t_t_p_request_8cpp.html  _h_t_t_p_request_8cpp__incl.map  _h_t_t_p_request_8cpp__incl.md5  _h_t_t_p_request_8hpp.html  _h_t_t_p_request_8hpp.js  _h_t_t_p_request_8hpp__dep__incl.map  _h_t_t_p_request_8hpp__dep__incl.md5  _h_t_t_p_request_8hpp__incl.map  _h_t_t_p_request_8hpp__incl.md5  _h_t_t_p_request_8hpp_source.html  _r_e_a_d_m_e_8md.html  _r_e_s_t_server_8cpp.html  _r_e_s_t_server_8cpp.js  _r_e_s_t_server_8cpp__incl.map  _r_e_s_t_server_8cpp__incl.md5  _r_e_s_t_server_8hpp.html  _r_e_s_t_server_8hpp__dep__incl.map  _r_e_s_t_server_8hpp__dep__incl.md5  _r_e_s_t_server_8hpp__incl.map  _r_e_s_t_server_8hpp__incl.md5  _r_e_s_t_server_8hpp_source.html  annotated.html  annotated_dup.js  class_h_t_t_p_request.html  class_h_t_t_p_request.js  class_h_t_t_p_request_exception.html  class_h_t_t_p_request_exception__coll__graph.map  class_h_t_t_p_request_exception__coll__graph.md5  class_r_e_s_t_server.html  class_r_e_s_t_server.js  class_r_e_s_t_server_exception.html  class_r_e_s_t_server_exception__coll__graph.md5  class_r_e_s_t_server_exception__inherit__graph.map  classes.html  dir_000000_000001.html  dir_000000_000002.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_bfccd401955b95cf8c75461437045ac0.html  (+35 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+11 more)
docs/latex/: _h_t_t_p_request_8cpp.tex  _h_t_t_p_request_8cpp__incl.md5  _h_t_t_p_request_8hpp.tex  _h_t_t_p_request_8hpp__dep__incl.md5  _h_t_t_p_request_8hpp__incl.md5  _r_e_s_t_server_8cpp.tex  _r_e_s_t_server_8cpp__incl.md5  _r_e_s_t_server_8hpp.tex  _r_e_s_t_server_8hpp__dep__incl.md5  _r_e_s_t_server_8hpp__incl.md5  annotated.tex  class_h_t_t_p_request.tex  class_h_t_t_p_request_exception.tex  class_h_t_t_p_request_exception__coll__graph.md5  class_r_e_s_t_server.tex  class_r_e_s_t_server_exception.tex  class_r_e_s_t_server_exception__inherit__graph.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_bfccd401955b95cf8c75461437045ac0.tex  dir_da94a52ab2c464c32f86ceaf7d4460c1.tex  files.tex  hierarchy.tex  index.tex  refman.tex  webpages_8cpp.tex  webpages_8cpp__incl.md5  webpages_8hpp.tex  webpages_8hpp__dep__incl.md5
examples/: CMakeLists.txt  main.cpp
inc/: HTTPRequest.hpp  HTTPStatus.hpp  RESTServer.hpp
src/: CMakeLists.txt  HTTPRequest.cpp  HTTPStatus.cpp  RESTServer.cpp
src/webpages/: webpages.cpp  webpages.hpp
tests/: CMakeLists.txt  main.cpp
(+14 files in other folders)
